--- a/Prac2/index.html
+++ b/Prac2/index.html
@@ -33,7 +33,7 @@
           <h5>Encabezado 5</h5>
           <h6>Encabezado 6</h6>
         </div>
-        <div class="encabezados">
+        <div class="parrafos">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora
             explicabo eveniet, fugiat voluptatibus cumque rerum!
@@ -51,19 +51,6 @@
             explicabo eveniet, fugiat voluptatibus cumque rerum!
           </p>
         </div>
-      </section>
-      <section>
-        <p>
-          <span>Lorem</span> ipsum dolor sit amet consectetur adipisicing elit.
-          Commodi, facilis?
-        </p>
-        <b>Negrita</b>
-        <strong>Strong</strong>
-        <button>
-          <a href="http://google.com" target="_blank" rel="noopener noreferrer">
-            Clic
-          </a>
-        </button>
       </section>
     </main>
   </body>
